# maji_ya_mchicha

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
flask_app/: app.py  restaurants.py
maji_ya_mchicha/: app.py  restaurants.py
tests/: test_app.py  test_maji_ya_mchicha.py  test_restaurants.py
