[tool.poetry]
name = "maji_ya_mchicha"
version = "0.1.0"
description = "REST backend mockup"
authors = ["nicolaskyejo <36485974+nicolaskyejo@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.761"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
